--- a/css/main.css
+++ b/css/main.css
@@ -787,7 +787,7 @@ body{
   position: absolute;
   height: 40px;
   width: 180px;
-  bottom: 75px;
+  bottom: 105px;
   left: calc(50% - 90px) !important;
   color: #111;
   display: -webkit-box;
@@ -1127,6 +1127,55 @@ body{
   pointer-events: auto;
 }
 
+.scroll-icon{
+  font-size: 16px;
+  color: #aaa;
+  position: absolute;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: calc(50% - 50px);
+  z-index: 1;
+  text-transform: capitalize;
+}
+
+.scroll-icon > span {
+  animation: lustre 3s linear infinite;
+  margin-right: 2px;
+  margin-left: 2px;
+}
+
+@keyframes lustre {
+  0%{
+    color: #aaa;
+  }
+  50%{
+    color: #fff;
+  }
+  100%{
+    color: #aaa;
+  }
+}
+
+.scroll-icon > span:nth-child(2){
+  animation-delay: 0.2s;
+}
+.scroll-icon > span:nth-child(3){
+  animation-delay: 0.5s;
+}
+.scroll-icon > span:nth-child(4){
+  animation-delay: 0.8s;
+}
+.scroll-icon > span:nth-child(5){
+  animation-delay: 1.1s;
+}
+.scroll-icon > span:nth-child(6){
+  animation-delay: 1.4s;
+}
+
 
 
 .links-underlined:hover{
@@ -1144,7 +1193,7 @@ body{
   border-bottom: 1px solid currentColor;
 }
 .top-head{
-  margin-top: -50vh;
+  margin-top: -60vh;
 }
 
 
